# equal-shares

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  a.py  dev.docker-compose.yaml  docker-compose.yaml  environment.yml  lint.docker-compose.yaml  prod.docker-compose.yaml  project_template.xlsx  test.docker-compose.yaml  test_data.py  windows-lint.bat  windows-serv.bat  windows-test.bat
backend/: .dockerignore  .flake8  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Makefile  db_projects.json  equal_shares.service  gunicorn_conf.py  locustfile.py  pyproject.toml
backend/.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _heapq.data.json  (+145 more)
backend/examples/: README.md  algorithm.py  examples_with_min_equals_max.py  experiment_with_10_council_members.json  experiment_with_10_council_members.py  experiment_with_10_council_members_project_names.json  experiment_with_10_council_members_results.json  experiment_with_200_students.json  experiment_with_200_students_results.json  real-2024-11-17-results.json  real-2024-11-17.json  real-2024-12-05-results.json  real-2024-12-05.json  run_json_examples.py  run_small_examples.py
backend/src/: __main__.py  app.py  cli.py  config.py  database.py  exceptions.py  logger.py  models.py  schemas.py  security.py
(+358 files in other folders)
