[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Equal Shares API"
authors = ["Dor", "Omer Priel <omer.priel2@gmail.com>", "Bar Nahmias", "Erel Segal-Halevi <erelsgl@gmail.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pabutools = "1.1.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
python-multipart = "^0.0.18"
pycryptodome = "^3.20.0"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
pandas-stubs = "^2.2.1.240316"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^25.1.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
locust = "^2.31.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length=120
multi_line_output=3
include_trailing_comma="True"
